--- a/etl.ipynb
+++ b/etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,19 @@
     "import psycopg2\n",
     "import pandas as pd\n",
     "from sql_queries import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os imoprt environ\n",
+    "if environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_INSTANCE\"):\n",
+    "    host = environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_INSTANCE\")\n",
+    "    user = environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_USER\")\n",
+    "    password = environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_PASSWORD\")"
    ]
   },
   {
@@ -421,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:udacity-data-engineering-nano]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-udacity-data-engineering-nano-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,9 +448,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
