Feat: added create database if database does not exist.

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os imoprt environ\n",
+    "from os import environ\n",
     "if environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_INSTANCE\"):\n",
     "    host = environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_INSTANCE\")\n",
     "    user = environ.get(\"UDACITY_DATA_ENGINEER_POSTGRES_USER\")\n",
@@ -36,12 +36,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbname = \"test1\"\n",
+    "sqlCreateDatabase = \"CREATE DATABASE \" + dbname\n",
+    "sqlCheckDatabaseExists = \"SELECT datname FROM pg_catalog.pg_database WHERE datname = '\" + dbname +\"'\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
-    "cur = conn.cursor()"
+    "conn = psycopg2.connect(\"host=\" + host + \" user=\" + user + \" password=\\\"\" + password + \"\\\"\")\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(sqlCheckDatabaseExists)\n",
+    "dbExists = cursor.fetchone()\n",
+    "if not exists:\n",
+    "    cur.execute(sqlCreateDatabase)"
    ]
   },
   {
