feat: Set up local working environment.
Set up local postgres instance and created envionment variables to
obtain connection information.

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=\" + host + \" user=\" + user + \" password=\\\"\" + password + \"\\\"\")\n",
+    "conn = psycopg2.connect(\"host=\" + host + \" user=\" + user + \" password=\" + password )\n",
+    "conn.autocommit = True\n",
     "cur = conn.cursor()\n",
     "cur.execute(sqlCheckDatabaseExists)\n",
-    "dbExists = cursor.fetchone()\n",
-    "if not exists:\n",
+    "dbExists = cur.fetchone()\n",
+    "if not dbExists:\n",
     "    cur.execute(sqlCreateDatabase)"
    ]
   },
