feat: Process song_data
Read in song_data via pandas dataframe read_json method.

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,29 +91,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_files = "
+    "filepath = \"./data/song_data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = "
+    "song_files = get_files(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_songs</th>\n",
+       "      <th>artist_id</th>\n",
+       "      <th>artist_latitude</th>\n",
+       "      <th>artist_longitude</th>\n",
+       "      <th>artist_location</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ARNTLGG11E2835DDB9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>Clp</td>\n",
+       "      <td>SOUDSGM12AC9618304</td>\n",
+       "      <td>Insatiable (Instrumental Version)</td>\n",
+       "      <td>266.39628</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_songs           artist_id  artist_latitude  artist_longitude  \\\n",
+       "0          1  ARNTLGG11E2835DDB9              NaN               NaN   \n",
+       "\n",
+       "  artist_location artist_name             song_id  \\\n",
+       "0                         Clp  SOUDSGM12AC9618304   \n",
+       "\n",
+       "                               title   duration  year  \n",
+       "0  Insatiable (Instrumental Version)  266.39628     0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = \n",
+    "df = pd.read_json(song_files[0], lines=True)\n",
     "df.head()"
    ]
   },
