feat: Add time ETL. Set connection strings.
 * Complete ETL for time table in etl.ipynb

 * Set connection strings in etl.ipynb and test.ipynb.

 * Add CREATE and DROP TABLE statements.

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -14,6 +14,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set all modules to reload since coding iteratively on sql_queries.py and create_tables.py\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import glob\n",
     "import psycopg2\n",
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,33 +47,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbname = \"test1\"\n",
-    "sqlCreateDatabase = \"CREATE DATABASE \" + dbname\n",
-    "sqlCheckDatabaseExists = \"SELECT datname FROM pg_catalog.pg_database WHERE datname = '\" + dbname +\"'\""
+    "# Recreate database & tables\n",
+    "# Pulled from main() in create_tables.py\n",
+    "from create_tables import *\n",
+    "from sql_queries import *\n",
+    "\n",
+    "try:\n",
+    "    cur, conn = create_database()\n",
+    "except:\n",
+    "    print(\"Error: Coud not create database\")\n",
+    "    if cur or conn:\n",
+    "        cur.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "if cur or conn:\n",
+    "    try:\n",
+    "        drop_tables(cur, conn)\n",
+    "        create_tables(cur, conn)\n",
+    "    except:\n",
+    "        print(\"Error: Could not drop & create tables\")\n",
+    "    finally:\n",
+    "        cur.close()\n",
+    "        conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=\" + host + \" user=\" + user + \" password=\" + password )\n",
-    "conn.autocommit = True\n",
-    "cur = conn.cursor()\n",
-    "cur.execute(sqlCheckDatabaseExists)\n",
-    "dbExists = cur.fetchone()\n",
-    "if not dbExists:\n",
-    "    cur.execute(sqlCreateDatabase)"
+    "dbname = \"sparkifydb\"\n",
+    "try:\n",
+    "    conn = psycopg2.connect(\"host={} dbname={} user={} password={}\".format(host, dbname, user, password))\n",
+    "    conn.set_session(autocommit=True)\n",
+    "    cur = conn.cursor()\n",
+    "except psycopg2.Error as e: \n",
+    "    print(\"Error: Could not make connection to the Postgres database\")\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +526,7 @@
        "4  \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/5...     15  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,44 +534,6 @@
    "source": [
     "df = pd.read_json(log_files[0], lines=True)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "artist            object\n",
-       "auth              object\n",
-       "firstName         object\n",
-       "gender            object\n",
-       "itemInSession      int64\n",
-       "lastName          object\n",
-       "length           float64\n",
-       "level             object\n",
-       "location          object\n",
-       "method            object\n",
-       "page              object\n",
-       "registration     float64\n",
-       "sessionId          int64\n",
-       "song              object\n",
-       "status             int64\n",
-       "ts                 int64\n",
-       "userAgent         object\n",
-       "userId            object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes # Show datatypes of dataframe"
    ]
   },
   {
@@ -560,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +737,7 @@
        "4  \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/5...     15  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,106 +751,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1970-01-01\n",
-       "1    1970-01-01\n",
-       "2    1970-01-01\n",
-       "3    1970-01-01\n",
-       "4    1970-01-01\n",
-       "Name: ts, dtype: object"
+       "0   2018-11-22 00:03:52.796\n",
+       "1   2018-11-22 00:09:10.796\n",
+       "2   2018-11-22 00:12:06.796\n",
+       "3   2018-11-22 00:15:41.796\n",
+       "4   2018-11-22 00:23:40.796\n",
+       "Name: ts, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Adapted from https://stackoverflow.com/questions/41783003/how-do-i-convert-timestamp-to-datetime-date-in-pandas-dataframe\n",
-    "t = pd.to_datetime(df[\"ts\"]).apply(lambda x: x.date())\n",
+    "# Adapted from https://knowledge.udacity.com/questions/112304\n",
+    "t = pd.to_datetime(df[\"ts\"], unit=\"ms\")\n",
     "t.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(t))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 82 entries, 0 to 95\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   artist         82 non-null     object \n",
-      " 1   auth           82 non-null     object \n",
-      " 2   firstName      82 non-null     object \n",
-      " 3   gender         82 non-null     object \n",
-      " 4   itemInSession  82 non-null     int64  \n",
-      " 5   lastName       82 non-null     object \n",
-      " 6   length         82 non-null     float64\n",
-      " 7   level          82 non-null     object \n",
-      " 8   location       82 non-null     object \n",
-      " 9   method         82 non-null     object \n",
-      " 10  page           82 non-null     object \n",
-      " 11  registration   82 non-null     float64\n",
-      " 12  sessionId      82 non-null     int64  \n",
-      " 13  song           82 non-null     object \n",
-      " 14  status         82 non-null     int64  \n",
-      " 15  ts             82 non-null     int64  \n",
-      " 16  userAgent      82 non-null     object \n",
-      " 17  userId         82 non-null     object \n",
-      "dtypes: float64(2), int64(4), object(12)\n",
-      "memory usage: 12.2+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_data = ()\n",
+    "# Adapted from https://knowledge.udacity.com/questions/112304\n",
+    "time_data = pd.concat([t, t.dt.hour, t.dt.day, t.dt.week, t.dt.month, t.dt.year, t.dt.weekday], axis=1)\n",
     "column_labels = (\"start_time\", \"hour\", \"day\", \"week\", \"month\", \"year\", \"weekday\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-11-22 00:03:52.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-11-22 00:09:10.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-11-22 00:12:06.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-11-22 00:15:41.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-11-22 00:23:40.796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               start_time hour day week month  year weekday\n",
+       "0 2018-11-22 00:03:52.796    0  22   47    11  2018       3\n",
+       "1 2018-11-22 00:09:10.796    0  22   47    11  2018       3\n",
+       "2 2018-11-22 00:12:06.796    0  22   47    11  2018       3\n",
+       "3 2018-11-22 00:15:41.796    0  22   47    11  2018       3\n",
+       "4 2018-11-22 00:23:40.796    0  22   47    11  2018       3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "time_df = \n",
+    "# Adapted from https://knowledge.udacity.com/questions/112304\n",
+    "time_df = pd.DataFrame(data=time_data.values, columns=column_labels)\n",
     "time_df.head()"
    ]
   },
@@ -871,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
