feat: Extract & insert data for songs table

--- a/test.ipynb
+++ b/test.ipynb
@@ -45,9 +45,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>year</th>\n",
+       "        <th>duration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOUDSGM12AC9618304</td>\n",
+       "        <td>Insatiable (Instrumental Version)</td>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>0</td>\n",
+       "        <td>266.39627</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOUDSGM12AC9618304', 'Insatiable (Instrumental Version)', 'ARNTLGG11E2835DDB9', 0, 266.39627)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql $conn_string SELECT * FROM songs LIMIT 5;"
    ]
