--- a/etl.ipynb
+++ b/etl.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +56,11 @@
     "from create_tables import *\n",
     "from sql_queries import *\n",
     "\n",
+    "# Close any open cursors or connections in the local notebook\n",
+    "if cur or conn:\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "    \n",
     "try:\n",
     "    cur, conn = create_database()\n",
     "except:\n",
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +210,7 @@
        "0  Insatiable (Instrumental Version)  266.39628     0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,11 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SOUDSGM12AC9618304',\n",
+       " 'Insatiable (Instrumental Version)',\n",
+       " 'ARNTLGG11E2835DDB9',\n",
+       " 0,\n",
+       " 266.39628]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "song_data = \n",
+    "# Adapted from https://knowledge.udacity.com/questions/97110\n",
+    "song_data = df[[\"song_id\", \"title\", \"artist_id\", \"year\", \"duration\"]].values[0].tolist()\n",
     "song_data"
    ]
   },
@@ -247,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
