feat: Extract & insert data for users table

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "4  \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/5...     15  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,11 +966,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_df = df[[\"userId\"]]"
+    "user_df = df[[\"userId\", \"firstName\", \"lastName\", \"gender\", \"level\"]]"
    ]
   },
   {
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
