--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>user_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>gender</th>\n",
+       "        <th>level</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>15</td>\n",
+       "        <td>Lily</td>\n",
+       "        <td>Koch</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>26</td>\n",
+       "        <td>Ryan</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>50</td>\n",
+       "        <td>Ava</td>\n",
+       "        <td>Robinson</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>97</td>\n",
+       "        <td>Kate</td>\n",
+       "        <td>Harrell</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>101</td>\n",
+       "        <td>Jayden</td>\n",
+       "        <td>Fox</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(15, 'Lily', 'Koch', 'F', 'paid'),\n",
+       " (26, 'Ryan', 'Smith', 'M', 'free'),\n",
+       " (50, 'Ava', 'Robinson', 'F', 'free'),\n",
+       " (97, 'Kate', 'Harrell', 'F', 'paid'),\n",
+       " (101, 'Jayden', 'Fox', 'M', 'free')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql $conn_string SELECT * FROM users LIMIT 5;"
    ]
