feat: Add README

--- a/test.ipynb
+++ b/test.ipynb
@@ -422,6 +422,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Troubleshooting song_id SOZCTXZ12AB0182364 Missing From JSON Log Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/song_data/A/A/C/TRAACCG128F92E8A55.json:{\"num_songs\": 1, \"artist_id\": \"AR5KOSW1187FB35FF4\", \"artist_latitude\": 49.80388, \"artist_longitude\": 15.47491, \"artist_location\": \"Dubai UAE\", \"artist_name\": \"Elena\", \"song_id\": \"SOZCTXZ12AB0182364\", \"title\": \"Setanta matins\", \"duration\": 269.58322, \"year\": 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "!grep -ir SOZCTXZ12AB0182364 ./data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown in the result above, there is not a log record for \"SOZCTXZ12AB0182364\". At some point this JSON log file was removed. Therefore cannot me requirement of one record returning with non-NULL `song_id` and `artist_id` values. See https://knowledge.udacity.com/questions/48698 for a discussion of the issue."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
